Adjusted mapstructure and changed header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="nationPages/nations.html">Nations</a></li>
+                        <li><a href="webpages/allCharacters.html">Characters</a></li>
                     </ul>  
                 </li>
                 <li class="searchBar">
@@ -77,27 +78,27 @@
 
                 <div class="characterSlides">
                     <div class="characterSlide active">
-                        <img src="nationPages/altipianiPages/altipianiImg/bigNicTea.png" alt="nicolas">
+                        <img src="nationPages/altipianiPages/altipianiImg/castImg/nicolasImg/headshotNicTea.png" alt="nicolas">
                         <p class="characterCredit">Nicolas art by @Tea4Silver</p>
                     </div>
 
                     <div class="characterSlide">
-                        <img src="nationPages/riimutPages/riimutImg/bigAse.png" alt="ase">
+                        <img src="nationPages/riimutPages/riimutImg/castImg/aseImg/headshotAse.png" alt="ase">
                         <p class="characterCredit">Åse art by @Tea4Silver</p>
                     </div>
 
                     <div class="characterSlide">
-                        <img src="nationPages/zloyvorPages/zloyvorImg/bigAna.png" alt="anastasia">
+                        <img src="nationPages/zloyvorPages/zloyvorImg/castImg/anastasiaImg/headshotAna.png" alt="anastasia">
                         <p class="characterCredit">Anastasia art by @Tea4Silver</p>
                     </div>
 
                     <div class="characterSlide">
-                        <img src="nationPages/wastelandPages/wastelandImg/avery.png" alt="avery">
+                        <img src="nationPages/wastelandPages/wastelandImg/castImg/averyImg/headshotAvery.png" alt="avery">
                         <p class="characterCredit">Avery art by @Tea4Silver</p>
                     </div>
 
                     <div class="characterSlide">
-                        <img src="nationPages/altanawuePages/altanawueImg/bigIsaac.png" alt="isaac">
+                        <img src="nationPages/altanawuePages/altanawueImg/castImg/isaacImg/isaacHeadshot.png" alt="isaac">
                         <p class="characterCredit">Isaac art by @Tea4Silver</p>
                     </div>
                 </div>
