--- a/nationPages/altanawuePages/castPages/isaac.html
+++ b/nationPages/altanawuePages/castPages/isaac.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -32,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altanawueImg/bigIsaac.png" alt="castImage" class="sideCastImg">
+          <img src="../altanawueImg/castImg/isaacImg/isaacHeadshot.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Isaac</h2>
 
@@ -106,11 +107,11 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <img src="../altanawueImg/bigIsaac.png" alt="isaacHeadshotByTea4Silver">
+                        <img src="../altanawueImg/castImg/isaacImg/isaacHeadshot.png" alt="isaacHeadshotByTea4Silver">
                         <p>@Tea4Silver</p>
                     </div>
                     <div class="artItem">
-                        <img src="../altanawueImg/isaacWithVeil.png" alt="isaacHeadshotWithVeilByTea4Silver">
+                        <img src="../altanawueImg/castImg/isaacImg/isaacWithVeil.png" alt="isaacHeadshotWithVeilByTea4Silver">
                         <p>@Tea4Silver</p>
                     </div>
                 </div>
