--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../nations.html">Nations</a></li>
+                        <li><a href="../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -58,7 +59,7 @@
 
               <!-- Cario -->
               <a href="./castPages/cario.html" class="castCoverTwo">
-                  <img src="altipianiImg/bigCario.png" alt="carioCover">
+                  <img src="altipianiImg/castImg/carioImg/headshotCario.png" alt="carioCover">
               </a>
 
               <a class="castTextTwo" href="./castPages/cario.html">
@@ -76,7 +77,7 @@
 
               <!-- Nicolas -->
               <a href="./castPages/nicolas.html" class="castCoverFour">
-                  <img src="altipianiImg/bigNicTea.png" alt="nicolasCover">
+                  <img src="altipianiImg/castImg/nicolasImg/headshotNicTea.png" alt="nicolasCover">
               </a>
 
               <a class="castTextFour" href="./castPages/nicolas.html">
@@ -85,7 +86,7 @@
 
               <!-- Reve -->
               <a href="./castPages/reve.html" class="castCoverFive">
-                  <img src="altipianiImg/reve.png" alt="reveCover">
+                  <img src="altipianiImg/castImg/reveImg/headshotReve.png" alt="reveCover">
               </a>
 
               <a class="castTextFive" href="./castPages/reve.html">
