--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -32,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/bigNicTea.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/castImg/nicolasImg/headshotNicTea.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Nicolas Raffaelli</h2>
 
@@ -108,11 +109,11 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <img src="../altipianiImg/bigNic.png" alt="nicHeadshot">
+                        <img src="../altipianiImg/castImg/nicolasImg/headshotNic.png" alt="nicHeadshot">
                         <p>@Ur_Local_Potato_Kai</p>
                     </div>
                     <div class="artItem">
-                        <img src="../altipianiImg/bigNicTea.png" alt="nicHeadshotByTea4Silver">
+                        <img src="../altipianiImg/castImg/nicolasImg/headshotNicTea.png" alt="nicHeadshotByTea4Silver">
                         <p>@Tea4Silver</p>
                     </div>
                 </div>
