--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                       <li><a href="../index.html">Home</a></li>
                         <li><a href="nations.html">Nations</a></li>
+                        <li><a href="../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
