--- a/nationPages/wastelandPages/wastelandMainpage.html
+++ b/nationPages/wastelandPages/wastelandMainpage.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../nations.html">Nations</a></li>
+                        <li><a href="../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -51,7 +52,7 @@
 
               <!-- Aver -->
               <a href="./castPages/avery.html" class="castCoverOne">
-                  <img src="wastelandImg/avery.png" alt="averyHeadshot">
+                  <img src="wastelandImg/castImg/averyImg/headshotAvery.png" alt="averyHeadshot">
               </a>
 
               <a class="castTextOne" href="./castPages/avery.html">
