--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -32,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../zloyvorImg/bigAna.png" alt="castImage" class="sideCastImg">
+          <img src="../zloyvorImg/castImg/anastasiaImg/headshotAna.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Anastasia</h2>
 
@@ -101,7 +102,7 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <img src="../zloyvorImg/bigAna.png" alt="anastasiaHeadshotByTea4Silver">
+                        <img src="../zloyvorImg/castImg/anastasiaImg/headshotAna.png" alt="anastasiaHeadshotByTea4Silver">
                         <p>@Tea4Silver</p>
                     </div>
                 </div>
