--- a/nationPages/altanawuePages/altanawueMainpage.html
+++ b/nationPages/altanawuePages/altanawueMainpage.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                        <li><a href="../../index.html">Home</a></li>
                        <li><a href="../nations.html">Nations</a></li>
+                       <li><a href="../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -60,7 +61,7 @@
 
               <!-- Isaac -->
               <a href="./castPages/isaac.html" class="castCoverTwo">
-                  <img src="altanawueImg/bigIsaac.png" alt="isaacCover">
+                  <img src="altanawueImg/castImg/isaacImg/isaacHeadshot.png" alt="isaacCover">
               </a>
 
               <a class="castTextTwo" href="./castPages/isaac.html">
