--- a/nationPages/altipianiPages/castPages/cario.html
+++ b/nationPages/altipianiPages/castPages/cario.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -32,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/bigCario.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/castImg/carioImg/headshotCario.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Cario Vesco</h2>
 
@@ -108,7 +109,7 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <img src="../altipianiImg/bigCario.png" alt="carioHeadshot">
+                        <img src="../altipianiImg/castImg/carioImg/headshotCario.png" alt="carioHeadshot">
                         <p>@Ur_Local_Potato_Kai</p>
                     </div>
                 </div>
