--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -32,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/reve.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/castImg/reveImg/headshotReve.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Reve Nox Craven</h2>
 
@@ -115,12 +116,12 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <img src="../altipianiImg/bigReve.png" alt="reveCollabHeadshot">
+                        <img src="../altipianiImg/castImg/reveImg/reveCollabImg.png" alt="reveCollabHeadshot">
                         <p>@Ur_Local_Potato_Kai</p>
                     </div>
 
                     <div class="artItem">
-                        <img src="../altipianiImg/reve.png" alt="reveHeadshot">
+                        <img src="../altipianiImg/castImg/reveImg/headshotReve.png" alt="reveHeadshot">
                         <p>@Ur_Local_Potato_Kai</p>
                     </div>
                 </div>
