--- a/nationPages/riimutPages/riimutMainpage.html
+++ b/nationPages/riimutPages/riimutMainpage.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../nations.html">Nations</a></li>
+                        <li><a href="../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -50,7 +51,7 @@
 
               <!-- ase -->
               <a href="./castPages/ase.html" class="castCoverOne">
-                  <img src="riimutImg/ase.png" alt="aseCover">
+                  <img src="riimutImg/castImg/aseImg/headshotAse.png" alt="aseCover">
               </a>
 
               <a class="castTextOne" href="./castPages/ase.html">
