--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -16,6 +16,7 @@
                     <ul class="dropdownMenu">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../nations.html">Nations</a></li>
+                        <li><a href="../../webpages/allCharacters.html">Characters</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -51,7 +52,7 @@
 
               <!-- Anastasia -->
               <a href="./castPages/anastasia.html" class="castCoverOne">
-                  <img src="zloyvorImg/anastasia.png" alt="anastasiaCover">
+                  <img src="zloyvorImg/castImg/anastasiaImg/headshotAna.png" alt="anastasiaCover">
               </a>
 
               <a class="castTextOne" href="./castPages/anastasia.html">
