Changed main header

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                     <hr>
 
                     <p class="updateText">
-                        Added new Reve art by @Ur_Local_Potato_Kai and updated the story info page to now show our progress! 
-                        We are still working on the other pages, 
-                        which will be marked with (WIP) until completion.
+                        Added new nation pages! Shokuminchi Kokka, Terpayâtre and The Wasteland now have their own pages with lore! 
+                        Also changed the main header of the site to the one shown on the home page.
+                        We are still working on the other pages, which will be marked with (WIP) until completion.
                     </p>
 
                     <hr>
@@ -210,7 +210,7 @@
                         <img src="img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="img/homeFooter.png" alt="footerImage" class="footerImg">
+                <img src="img/footerImg.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
