Added new Valerio art

--- a/nationPages/altipianiPages/castPages/valerio.html
+++ b/nationPages/altipianiPages/castPages/valerio.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/castImg/valerioImg/headshotValerio.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Valerio Consoli Demonte</h2>
 
@@ -116,8 +116,8 @@
 
                 <div class="artSlide active">
                     <div class="artItem">
-                        <!-- <img src="../altipianiImg/bigNic.png" alt="nicHeadshot"> -->
-                        <p>Nothing to see here yet</p>
+                        <img src="../altipianiImg/castImg/valerioImg/headshotValerio.png" alt="valerioHeadshot">
+                        <p>@Tea4Silver</p>
                     </div>
                 </div>
 
