--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
                     <hr>
 
                     <p class="updateText">
-                        Added new nation pages! Shokuminchi Kokka, Terpayâtre and The Wasteland now have their own pages with lore! 
-                        Also changed the main header of the site to the one shown on the home page.
+                        Added new Valerio art by the amazing Tea4Silver!
                         We are still working on the other pages, which will be marked with (WIP) until completion.
                     </p>
 
